Modified contact page - same styles, but setup in next

--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,7 +11,7 @@
 
 body {
   font-family: "Work Sans", sans-serif;
-  background-image: url(assets/Bg.jpeg);
+  /* background-image: url(assets/Bg.jpeg); */
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -29,7 +30,7 @@ body:has(.card[data-color="green"]:hover) {
   }
 
   .head-text {
-    @apply sm:text-5xl text-3xl font-semibold sm:leading-snug font-poppins;
+    @apply sm:text-5xl text-3xl font-semibold sm:leading-snug;
   }
 
   .subhead-text {
