--- a/my-app/components/About.css
+++ b/my-app/components/About.css
@@ -10,6 +10,7 @@
 }
 
 .heading {
+  text-align: center;
   font-size: 50px;
   font-weight: normal;
   color: rgb(34, 33, 33);
@@ -30,7 +31,7 @@
   list-style: none;
   padding: 0;
   display: flex;
-  margin-left: 345px;
+  justify-content: center;
 }
 
 .menu li {
