--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -1,3 +1,4 @@
+/* import bg from '../assets/Bg.jpeg'; */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
@@ -7,6 +8,9 @@
 :root {
   --blue-rgb: 237 245 255;
   --green-rgb: 125 161 35;
+}
+*{
+  box-sizing: border-box;
 }
 
 body {
@@ -78,3 +82,70 @@ body:has(.card[data-color="green"]:hover) {
     @apply text-black-500 font-extrabold flex-1 text-3xl max-md:text-center;
   }
 }
+
+
+
+
+
+/* for contact page */
+.total{
+  
+  width: 100%;
+}
+.left-side{
+  width: 50%;
+  background-image: url("../assets/Bg.jpeg");
+  background-size: cover;
+
+}
+.right-side{
+  width: 60%;
+}
+.f{
+  margin-top: 18rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .total{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .left-side{
+    width: 99%;
+    height: 35em;
+  }
+  .right-side{
+    width: 100%;
+    text-align: center;
+  }
+  .f{
+    margin-top: 6rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px){ 
+  .total{
+    
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .left-side{
+    width: 100%;
+    height: 55em;
+  }
+  .right-side{
+    width: 100%;
+    text-align: center;
+  }
+  .f{
+    margin-top: 30rem;
+  }
+} 
+
+/* contact page end */
