--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -10,6 +10,8 @@
   --green-rgb: 125 161 35;
 }
 *{
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -87,6 +89,7 @@ body:has(.card[data-color="green"]:hover) {
 
 
 
+
 /* for contact page */
 .total{
   
@@ -99,6 +102,7 @@ body:has(.card[data-color="green"]:hover) {
 
 }
 .right-side{
+  /* display: flex; */
   width: 60%;
 }
 .f{
@@ -127,7 +131,7 @@ body:has(.card[data-color="green"]:hover) {
     margin-top: 6rem;
   }
 }
-@media (min-width: 768px) and (max-width: 1024px){ 
+@media (min-width: 768px) and (max-width: 1150px){ 
   .total{
     
     width: 100%;
