--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -13,6 +13,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  
+}
+.third{
+  display: none;
+}
+.myGrid{
+  column-gap: 17px;
+    margin: 33px;
 }
 
 body {
@@ -130,6 +138,20 @@ body:has(.card[data-color="green"]:hover) {
   .f{
     margin-top: 6rem;
   }
+
+ .first{
+  display: none;
+ }
+ .second{
+   display: none;
+ }
+ .third{
+  display: block;
+ }
+ .third:hover{
+  transform: scale(1.2);
+}
+
 }
 @media (min-width: 768px) and (max-width: 1150px){ 
   .total{
@@ -139,6 +161,9 @@ body:has(.card[data-color="green"]:hover) {
     justify-content: center;
     align-items: center;
   }
+  .first{
+    display: none;
+   }
   .left-side{
     width: 100%;
     height: 55em;
@@ -150,6 +175,16 @@ body:has(.card[data-color="green"]:hover) {
   .f{
     margin-top: 25rem;
   }
+  .second{
+    display: none;
+  }
+  .third{
+   display: block;
+  }
+  .third:hover{
+    transform: scale(1.2);
+  }
+  
 } 
 
 /* contact page end */
