--- a/my-app/components/About.css
+++ b/my-app/components/About.css
@@ -17,6 +17,7 @@
   margin-bottom: 20px;
 }
 
+
 .content-container {
   display: flex;
   width: 100%;
@@ -72,4 +73,19 @@
   height: auto;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (max-width: 768px) {
+  .heading{
+     font-size: 27px;
+  }
+  .menu{
+    align-items:center;
+    justify-content: end;
+  }
+  .menu li{
+    margin-top: 10px;
+    margin-left: 2px;
+    font-size: 13px;
+  }
 }
