--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -30,6 +30,15 @@ a{
     radial-gradient(at 50% 0%, hsla(225, 39%, 30%, 1) 0, transparent 50%),
     radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1) 0, transparent 50%);
 }
+.card_background{
+  background-color: hsla(339, 49%, 30%, 1);
+}
+.service_card{
+  background: url("../public/images/Service.jpg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 .text_gradient {
   background: radial-gradient(64.18% 64.18% at 71.16% 35.69%,
       #def9fa 0.89%,
